Added leader board functionality
